Corrigido link errado.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="www.mozilla.org" class="active">Mozilla</a>
         </li>
         <li>
-          <a href="http://womoz.mozillabrasil.org/">WoMoz</a>
+          <a href="http://womoz.mozillabrasil.org.br/">WoMoz</a>
           </li>
         <li>
           <a href="http://discourse.mozilla-community.org/">Discourse</a>
